          completely breaks on many occasions. Just do not do that. If
          only people would trust me sometimes :(
        - enabled gdrawable_id caching again.
        - some minor Gimp::UI streamlining & bugfixes.
        - more (undocumented) on_xxx hooks.
        - got rid of the old & crufty callback system (who uses it anyways?).

1.17  Wed Nov 24 21:25:19 CET 1999
        - re-fitted i18n translation for most plug-ins.
        - intllibs linking bugfix.
        - half-hearted attempt to i18nize logulator.
        - preliminary support for N_ (this function should
          not be necessary in perl).

1.16  Sun Nov 21 02:37:16 CET 1999
	- removed sethspin.pl & billboard, they are no longer maintained :(
        - *sigh* removed some debugging code.
        - new save-filter "dataurl" (more a joke, but it does work).
        - new save filter colorhtml.
        - implemented gimp_pixel_rgn_get_row2 (others still unimplemented).
        - updated enums.pl.

1.15  Fri Nov 19 19:12:16 CET 1999
	- added italian translations by Daniele Medri (madrid@kjws.com).
        - POINTS really are decipoints: correct xlfd_size to create
          larger (& more correct) fonts.
        - small api changes for 1.2.
        - (some) changes for the gimp api renaming.
        - added export capabilities to miff/avi.
        - fixed "dirty" identifier clash with <= 5.005_03 && PERL_POLLUTE.
        - updated seth's scripts.
        - improved avi hunk skipping and 24 bit handling.
        - realclean now also removes the Makefile (just to be sure)
	- only install pdl plug-ins when pdl is available.
        - gimp_directory is 1.1-only.
        - more warnings on people insisting on using broken perls.
        - renamed init_gtk to gtk_init, asdded gtk_init_hook function to
          work around the horrible initialization problems in Gtk.
        - goto &name is horribly broken somewhere. going back to eval _again_.

1.14  Mon Oct 11 03:23:13 CEST 1999